--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,5 +13,9 @@
             "database": "app",
             "username": "joeulam"
         }
+    ],
+    "java.project.referencedLibraries": [
+        "lib/**/*.jar",
+        "c:\\Users\\joeul\\Desktop\\mysql-connector-java-8.0.27\\mysql-connector-java-8.0.27.jar"
     ]
 }
